--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -11,7 +11,7 @@
 @tailwind components;
 
  /**
- * Import Tailwind Components
+ * Import Tailwind Components (using @apply)
  */
 
 @import 'components/card';
@@ -21,7 +21,7 @@
  * Import variables
  */
 
-@import "variables";
+//@import "variables";
 
 /**
  * Import npm dependencies
@@ -37,7 +37,8 @@
  * It's a best practice to use a different partial for each page
  */
 
-@import "layouts/home";
+//@import "layouts/home";
+
 
 /**
  * Do NOT include anything else in this file!
